# dbus-broker

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .packit.yaml  .packit.yml  .travis.yml  AUTHORS  COPYING  Cargo.toml  LICENSE  Makefile  NEWS  NEWS.md  README  README.md  REUSE.toml  dbus-broker.spec  meson.build  meson_options.txt  packit.yml
.cherryci/: ci-test  matrix  test-basic
.github/: codeql-config.yml  codeql-custom.qls  meson-arch-lib32.cross
.github/workflows/: ci.yml  cifuzz.yml  codeql-analysis.yml  codeql.yml  coverity.sh  coverity.yml  fuzz.yml  lib-codeql.yml  meson-tests.yml  publish.yml
docs/: dbus-broker-launch.rst  dbus-broker.rst  meson.build
packaging/: dbus-broker-git.spec  dbus-broker.spec
selinux/: dbus-broker.fc  dbus-broker.te
src/: activation.c  activation.h  bus.c  bus.h  clib.rs  connection.c  connection.h  dbus-match.c  dbus-match.h  dbus-message.c  dbus-message.h  dbus-protocol.h  dbus-sasl.c  dbus-sasl.h  dbus-socket.c  dbus-socket.h  dbus-variant.c  dbus-variant.h  dispatch.c  dispatch.h  driver.c  driver.h  lib-crate.rs  lib-generated.rs  lib-static.rs  lib.rs  listener.c  listener.h  match.c  match.h  meson.build  message.c  message.h  name.c  name.h  peer.c  peer.h  policy.c  policy.h  reply.c  (+23 more)
src/broker/: broker.c  broker.h  controller-dbus.c  controller.c  controller.h  main.c  main.h  manager.c  manager.h  test-broker.c  test-driver.c  test.h
src/bus/: activation.c  activation.h  bus.c  bus.h  diag.c  diag.h  driver.c  driver.h  listener.c  listener.h  match.c  match.h  metrics.c  metrics.h  name.c  name.h  peer.c  peer.h  policy.c  policy.h  reply.c  reply.h  test-match.c  test-name.c  test-reply.c
src/catalog/: catalog-ids.h  dbus-broker-launch.catalog  dbus-broker.catalog  meson.build
src/dbus/: address.c  address.h  connection.c  connection.h  message.c  message.h  protocol.c  protocol.h  queue.c  queue.h  sasl.c  sasl.h  socket.c  socket.h  test-address.c  test-message.c  test-queue.c  test-sasl.c  test-socket.c  test-stitching.c  test-unique-name.c  unique-name.c  unique-name.h
src/launch/: config.c  config.dtd  config.h  introspect.c  introspect.h  launcher.c  launcher.h  main.c  nss-cache.c  nss-cache.h  policy-parser.c  policy-parser.h  policy.c  policy.h  service.c  service.h  test-config.c  test-nss-cache.c  test-policy-parser.c
src/session/: main.c  main.h  mod.rs
src/spec/: dbus-specification.xml
src/units/system/: dbus-broker-metrics.socket  dbus-broker.service.in  meson.build
src/units/user/: dbus-broker-metrics.socket  dbus-broker.service.in  meson.build
src/util/: acct.h  acct.rs  apparmor-fallback.c  apparmor.c  apparmor.h  audit-fallback.c  audit.c  audit.h  common.h  coverage.h  dirwatch.c  dirwatch.h  dispatch.c  dispatch.h  error.c  error.h  fdlist.c  fdlist.h  fs.c  fs.h  log.c  log.h  metrics.c  metrics.h  misc.c  misc.h  mod.rs  nsec.c  nsec.h  proc.c  proc.h  ref.h  sampler.c  sampler.h  selinux-fallback.c  selinux.c  selinux.h  serialize.c  serialize.h  sockopt.c  (+23 more)
subprojects/: libc-rs-0.2.wrap  libcdvar-1.wrap  libcini-1.wrap  libclist-3.wrap  libcrbtree-3.wrap  libcshquote-1.wrap  libcstdaux-1.wrap  libcutf8-1.wrap  meson-cargo-1.wrap  sys-1.wrap
subprojects/packagefiles/libc-rs/: 0001-clippy-allow-all.patch  meson-detect-version.sh  meson.build
test/dbus/: bench-connect.c  bench-message.c  meson.build  test-broker.c  test-driver.c  test-fdspam.c  test-fdstream.c  test-lifetime.c  test-matches.c  test-reexecute.c  test-serialize.c  tool-flood.c  util-broker.c  util-broker.h  util-message.c  util-message.h
test/fmf/: activation-environment.fmf  activation.fmf  run-activation-environment-test.sh  run-activation-test.sh  run-smoke-test.sh  smoke.fmf
test/image/: dbrk-fedora.Dockerfile
test/integration/: README  util.sh
test/integration/fuzz/dfuzzer/: main.fmf  test.sh
test/integration/fuzz/sanitizers/: main.fmf  test.sh
test/integration/plans/: upstream_ci.fmf
test/integration/reference/dbus-daemon/: main.fmf  test.sh
test/osi/: mkosi.build  mkosi.default
test/osi/mkosi.cache/: .gitignore
test/osi/mkosi.extra/etc/systemd/system/: dbus.service
test/osi/mkosi.extra/etc/systemd/user/: dbus.service
test/osi/mkosi.extra/root/.config/htop/: htoprc
units/system/: dbus-broker.service.in
units/user/: dbus-broker.service.in
