option('audit', type: 'boolean', value: false, description: 'Audit support')
option('launcher', type: 'boolean', value: true, description: 'Build compatibility launcher')
option('docs', type: 'boolean', value: false, description: 'Build documentation')
option('reference-test', type: 'boolean', value: false, description: 'Run test suite against reference implementation')
option('selinux', type: 'boolean', value: false, description: 'SELinux support')
option('system-console-users', type: 'array', value: [], description: 'Additional set of names of system-users to be considered at-console')
