# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: D-Bus Broker Developers

install_data(
        'dbus-broker.catalog',
        install_dir: conf.get('catalogdir'),
)

if use_launcher
        install_data(
                'dbus-broker-launch.catalog',
                install_dir: conf.get('catalogdir'),
        )
endif
